--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -5,7 +5,7 @@
  * Kroc Camen, and the H5BP dev community and team.
  */
 
-//@import "normalize";
+@import "normalize";
 
 /* ==========================================================================
    Base styles: opinionated defaults
